<resources>
    <string name="app_name">UniCon</string>
    <string name="tvChooseConversionText">Choose what unit you want to convert</string>
    <string name="tvConvertTempText">Temperature conversion</string>
    <string name="etHint">Value</string>
    <string name="bConvertText">Convert</string>
    <string name="tvConvertLengthText">Length conversion</string>
    <string name="tvResultText">Result</string>
    <string name="equalsSign">=</string>
    <string name="tvConvertFromText">Convert from:</string>
    <string name="tvConvertToText">Convert to:</string>
    <string name="tvConvertMassText">Mass conversion</string>
    <string name="tvConvertVolumeText">Volume converter</string>

    <string-array name="Temp">
        <item>°C</item>
        <item>°F</item>
        <item>K</item>
        <item>°R</item>
        <item>°De</item>
        <item>°N</item>
        <item>°Ré</item>
        <item>°Rø</item>
    </string-array>

    <string-array name="Length">
        <item>millimeter</item>
        <item>meter</item>
        <item>kilometer</item>
        <item>thou</item>
        <item>inch</item>
        <item>feet</item>
        <item>yard</item>
        <item>mile</item>
    </string-array>

    <string-array name="Mass">
        <item>milligram</item>
        <item>gram</item>
        <item>kilogram</item>
        <item>tonne</item>
        <item>grain</item>
        <item>ounce</item>
        <item>pound</item>
        <item>short ton</item>
        <item>long ton</item>
    </string-array>

    <string-array name="Volume">
        <item>cubic millimeter</item>
        <item>cubic centimeter</item>
        <item>cubic decimeter</item>
        <item>cubic meter</item>
        <item>fluid ounce</item>
        <item>gill</item>
        <item>pint</item>
        <item>quart</item>
        <item>gallon</item>
        <item>milliliter</item>
        <item>centiliter</item>
        <item>deciliter</item>
        <item>liter</item>

    </string-array>
</resources>
